       execute (other notables will get positive or negative influence due to this action (random probability related to relations with notable)), 
       notable peasants so they could do revenge.
Changed: Information messages colors (only messages regarding peasant revenge and player clan related will be white)
Added: More AI parameters. Relations for AI heroes are important now. 0 No good relations and 0 money means death... (parameters will be added in configuration file during game load)
Feature: AI heroes can refuse to participate in peasant revenge (defined by parameters in partyLordLetNotableStartRevenge). Player clan members will participate
Changed: Parameter ReparationsScaleToSettlementHearts will be reset to 20, if it was more than 30. (this value will be updated in configuration file during game load) 
         It asures 2 AI executions due peasant revenge per year.
Changed: Increased lordWillDemandRansomMoneyIfHasLessGoldThan to 2000 (will change if configuration file is deleted)
230404 v8
Feature: Player and AI now play by the same rules (almost). Player can be killed if was caught after raid and "peasantRevengeTimeoutInDays" (5 days default) has not passed.  
         Player must be relative or friend or have high relations with party lord, and avoid heroes with some dangerous traits.
         Player can ask other clan or kingdom hero for reparation money (same rules as AI).
Added:   Configuration variable relationLordAndCriminalChangeWhenLordSavedTheCriminal
230405 v9
Fix: Compatibility with Diplomacy mod
230407 v10
Fix: Gold transfer action fix, when player pressed "criminal will pay".
Fix: String {=PRev0021} fix, no "cought".
XXXXXX v11
Feature: AI can now blame other AI for the village looting crime (AI and player can choose to kill them both)
         *** Not implemented, AI blame other AI, when player captures the criminal. (wip)
         *** Not implemented,player let other lord to decide criminal's fate.(-)
         

