@@ -6,7 +6,9 @@
     <UpdateItem>
         <ModuleFolder Value="F:\Program Files (x86)\Steam\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\PeasantRevenge"/>
         <!-- A direct path of your module -->   
-        <ChangeNotes Value="Fix: Gold transfer action fix, when player pressed criminal will pay Fix: String {=PRev0021} fix, no more cought."/>
+        <ChangeNotes Value="Feature: AI hero can now blame other AI for the village looting crime (AI and player can choose to kill them both)
+         Feature: AI hero can blame other AI hero, when player captures the criminal.
+         Various language fixes."/>
         <!-- Insert patch notes -->
         <Tags> 
             <!-- You can use the following tags: -->
